--- a/app/components/HelpFix/formik.css
+++ b/app/components/HelpFix/formik.css
@@ -27,6 +27,10 @@
     color: #ff00aa;
   }
   
+  .text-input:disabled {
+    background-color: #dddddd;
+  }
+
   .text-input {
     padding: .5rem;
     font-size: 16px;
